# sage

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  ANDROID_BUILD.md  AUDIT.md  CLAUDE.md  CSP_RULES.md  Cargo.toml  ISSUES.md  README.md  RECOMMENDATIONS.md  THEMING.md  TRANSACTION_FAILURE_EVENTS.md  android-dev.sh  components.json  eslint.config.js  index.html  keystore.properties  lingui.config.js  package.json  pnpm-lock.yaml  setup-android-env.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1725592481114-8034d350f53e4.mjs  vitest.config.ts
crates/sage/: Cargo.toml
crates/sage-api/: Cargo.toml  endpoints-tauri.json  endpoints.json
crates/sage-api/macro/: Cargo.toml
crates/sage-api/macro/src/: lib.rs  openapi.rs
crates/sage-api/src/: events.rs  lib.rs  openapi.rs  openapi_metadata.rs  records.rs  requests.rs  types.rs
crates/sage-assets/: Cargo.toml
crates/sage-assets/src/: cats.rs  error.rs  lib.rs  nfts.rs
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: main.rs  router.rs  rpc.rs  tls.rs
crates/sage-client/: Cargo.toml
crates/sage-client/src/: client.rs  connect.rs  error.rs  lib.rs  network.rs  peer.rs  request_map.rs  tls.rs
crates/sage-config/: Cargo.toml
crates/sage-config/src/: app_config.rs  assets.rs  config.rs  derivation_mode.rs  error.rs  lib.rs  network.rs  network_config.rs  old.rs  peer_mode.rs  rpc_config.rs  wallet.rs  wallet_config.rs
crates/sage-database/: Cargo.toml
crates/sage-database/src/: blockinfo.rs  blocks.rs  cat_coins.rs  cat_info.rs  cats.rs  coin_states.rs  database.rs  derivations.rs  did_coins.rs  dids.rs  error.rs  lib.rs  maintenance.rs  nft_coins.rs  nfts.rs  offers.rs  p2_coins.rs  peaks.rs  primitives.rs  rows.rs  serialized_primitives.rs  tables.rs  test_utils.rs  transactions.rs  unknown_coins.rs  utils.rs
crates/sage-keychain/: Cargo.toml
crates/sage-keychain/src/: encrypt.rs  error.rs  key_data.rs  keychain.rs  lib.rs
crates/sage-rpc/: Cargo.toml
crates/sage-rpc/src/: app_state.rs  cert_verifier.rs  lib.rs  main.rs  openapi.rs  router.rs  rustls_config.rs  tests.rs
crates/sage-rpc/tests/: rpc.rs  smoke_test.sh
crates/sage-wallet/: Cargo.toml
crates/sage-wallet/src/: child_kind.rs  coin_kind.rs  data.rs  database.rs  error.rs  lib.rs  offchain_metadata.rs  puzzle_context.rs  puzzle_info.rs  queues.rs  sync.rs  sync_manager.rs  test.rs  transaction.rs  utils.rs  wallet.rs  wallet_peer.rs
crates/sage/src/: endpoints.rs  error.rs  lib.rs  peers.rs  sage.rs  utils.rs  webhook_manager.rs
plugins/barcode-scanner/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/barcode-scanner/android/: local.properties
plugins/barcode-scanner/dist-js/: index.cjs  index.d.ts  index.js
plugins/barcode-scanner/guest-js/: index.ts
plugins/barcode-scanner/permissions/: default.toml
plugins/tauri-plugin-safe-area-insets/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
plugins/tauri-plugin-safe-area-insets/android/: build.gradle.kts
plugins/tauri-plugin-safe-area-insets/dist-js/: index.cjs  index.d.ts  index.js
plugins/tauri-plugin-safe-area-insets/guest-js/: index.ts
plugins/tauri-plugin-safe-area-insets/ios/: Package.swift  README.md
plugins/tauri-plugin-safe-area-insets/permissions/: default.toml
plugins/tauri-plugin-safe-area-insets/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
sage/: Cargo.toml
sage/src/: client.rs  database.rs  error.rs  keychain.rs  lib.rs  request_map.rs  wallet.rs
sage/src/client/: event.rs  handler.rs  peer.rs  request.rs  requests.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/sage/: Cargo.toml
src-tauri/sage-client/: Cargo.toml
src-tauri/sage-client/src/: connect.rs  error.rs  lib.rs  peer.rs
src-tauri/sage/src/: database.rs  error.rs  lib.rs
src-tauri/src/: app_state.rs  commands.rs  config.rs  discover_peers.rs  error.rs  lib.rs  main.rs  models.rs  parse.rs  peer_discovery.rs  puzzle_sync.rs  state.rs  sync.rs  sync_manager.rs  utils.rs  wallet.rs
src-tauri/src/commands/: actions.rs  config.rs  data.rs  keychain.rs  keys.rs  networks.rs  offers.rs  peers.rs  settings.rs  setup.rs  transactions.rs  wallet.rs
src-tauri/src/config/: network_config.rs  wallet_config.rs
src-tauri/src/models/: coin_data.rs  convert.rs  derivations.rs  did_data.rs  network_info.rs  nft_data.rs  p2_coin_data.rs  peer_info.rs  sync_event.rs  sync_event_data.rs  sync_info.rs  wallet_info.rs  wallet_secrets.rs
src-tauri/src/state/: app_state.rs  cat_task.rs  wallet_state.rs
src-tauri/src/sync/: peer_state.rs  sync_manager.rs  sync_state.rs  wallet_sync.rs
src-tauri/src/sync_manager/: initial_sync.rs  sync_status.rs  wallet_peer.rs
tauri-plugin-nfc-debug/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
tauri-plugin-nfc-debug/android/: build.gradle.kts
tauri-plugin-nfc-debug/examples/tauri-app/: package.json
tauri-plugin-nfc-debug/guest-js/: index.ts
tauri-plugin-nfc-debug/ios/: Package.swift  README.md
tauri-plugin-nfc-debug/ios/Sources/: ExamplePlugin.swift
tauri-plugin-nfc-debug/permissions/autogenerated/: reference.md
tauri-plugin-nfc-debug/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
tauri-plugin-sage/: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
tauri-plugin-sage/android/: build.gradle.kts
tauri-plugin-sage/dist-js/: index.cjs  index.d.ts  index.js
tauri-plugin-sage/guest-js/: index.ts
tauri-plugin-sage/ios/: Package.swift  README.md
tauri-plugin-sage/ios/Sources/: SagePlugin.swift
tauri-plugin-sage/ios/TangemSdk/: TangemSdk.swift
tauri-plugin-sage/ios/TangemSdkTests/: JSONRPCTests.swift
tauri-plugin-sage/permissions/: default.toml
tauri-plugin-sage/permissions/autogenerated/: reference.md
tauri-plugin-sage/permissions/schemas/: schema.json
tauri-plugin-sage/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+1271 files in other folders)
