[workspace]
members = ["sage", "src-tauri"]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"
dead_code = "warn"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "allow", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panic_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Serialization
sage = { path = "./sage" }
serde = "1.0.204"
serde_with = "3.9.0"
serde_json = "1.0.122"
bincode = "1.3.3"
toml = "0.8.19"
toml_edit = "0.22.20"
hex = "0.4.3"

# Tauri
tauri = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.0.0-rc.0"
tauri-build = "2.0.0-rc.0"

# Chia
chia = "0.9.0"
clvmr = "0.7.0"
bip39 = "2.0.0"
chia-wallet-sdk = "0.11.0"

# Crypto
sha2 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
aes-gcm = "0.10.3"
argon2 = "0.5.3"

# Async
tokio = "1.39.2"
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
futures-util = "0.3.30"
native-tls = "0.2.12"
sqlx = "0.8.0"

# Utilities
indexmap = "2.3.0"
itertools = "0.13.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
log = "0.4.22"
