[workspace.package]
readme = "README.md"
keywords = ["chia", "wallet", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies"]

[workspace]
members = ["src-tauri", "crates/*"]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "allow"
unreachable_code = "warn"
unreachable_patterns = "warn"
dead_code = "warn"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "allow", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
used_underscore_binding = "allow"
unwrap_used = "warn"
wildcard_imports = "allow"
cast_possible_truncation = "allow"

[workspace.dependencies]
sage = { path = "./crates/sage" }
sage-api = { path = "./crates/sage-api" }
sage-config = { path = "./crates/sage-config" }
sage-database = { path = "./crates/sage-database" }
sage-keychain = { path = "./crates/sage-keychain" }
sage-wallet = { path = "./crates/sage-wallet" }

# Serialization
serde = "1.0.204"
serde_with = "3.9.0"
serde_json = "1.0.122"
bincode = "1.3.3"
toml = "0.8.19"
hex = "0.4.3"
base64 = "0.22.1"

# Tauri
tauri = "2.1.1"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-shell = "2.0.2"
tauri-plugin-os = "2.0.0"
tauri-build = "2.0.3"
tauri-plugin-safe-area-insets = { path = "./plugins/tauri-plugin-safe-area-insets" }

# Specta
specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = "2.0.0-rc.20"

# Chia
chia = { git = "https://github.com/Chia-Network/chia_rs", rev = "cb4f521fe32675a0238453a7c850083405f2952a", version = "0.16.0" }
clvmr = "0.10.0"
chia-wallet-sdk = { features = ["rustls"], git = "https://github.com/xch-dev/chia-wallet-sdk", rev = "1a2d2320050263f7f36cbf33a1424e6185d906f5" }
bip39 = "2.0.0"
bech32 = "0.9.1"

# Crypto
sha2 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
aes-gcm = "0.10.3"
argon2 = "0.5.3"

# Async
tokio = "1.39.2"
futures-util = "0.3.30"
futures-lite = "2.3.0"
sqlx = "0.8.0"
reqwest = { version = "0.12.7", default-features = false }

# Utilities
indexmap = "2.3.0"
itertools = "0.13.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
hex-literal = "0.4.1"
rayon = "1.10.0"
once_cell = "1.19.0"
num-traits = "0.2.19"
paste = "1.0.15"
chrono = "0.4.38"

# Tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
log = "0.4.22"
test-log = "0.2.16"

# CLI
dirs = "5.0.1"
axum = "0.7.9"
axum-server = "0.7.1"
rustls = "0.23.17"
rustls-pemfile = "2.2.0"
clap = "4.5.21"
