[package]
name = "sage"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chia-wallet-sdk = "0.11.0"
chia = "0.9.0"
clvmr = "0.7.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
serde_with = { version = "3.8.2" }
