[package]
name = "sage"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chia-wallet-sdk = "0.11.0"
chia = "0.9.0"
clvmr = "0.7.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.8.2" }
bincode = "1.3.3"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio = { version = "1.38.0", features = ["full"] }
tungstenite = "0.23.0"
futures-util = "0.3.30"
log = "0.4.22"
native-tls = "0.2.12"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
rand = "0.8.5"
argon2 = "0.5.3"
