[package]
name = "sage-tauri"
version = "0.12.9"
description = "A next generation Chia wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
license = "Apache-2.0"
repository = "https://github.com/rigidity/sage"
edition = "2024"

[lints]
workspace = true

[lib]
name = "sage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sage = { workspace = true }
sage-api = { workspace = true, features = ["tauri"] }
sage-api-macro = { workspace = true }
sage-config = { workspace = true }
sage-wallet = { workspace = true }
sage-rpc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = [] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tokio = { workspace = true }
chia-wallet-sdk = { workspace = true, features = ["rustls"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
tracing = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }

# This is to ensure that the bindgen feature is enabled for the aws-lc-rs crate.
# https://aws.github.io/aws-lc-rs/platform_support.html#tested-platforms
aws-lc-rs = { version = "1", features = ["bindgen"] }
tauri-plugin-sharesheet = "0.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { workspace = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = { workspace = true }
tauri-plugin-barcode-scanner = { workspace = true }
tauri-plugin-safe-area-insets = { workspace = true }
tauri-plugin-sage = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true, features = [] }
glob = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json", "aws-lc-rs"]
