[package]
name = "tauri-plugin-sage"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sage"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
