[package]
name = "sage-api"
version = "0.8.5"
edition = "2021"
license = "Apache-2.0"
description = "API definitions for the Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
sage-config = { workspace = true }
serde = { workspace = true }
tauri-specta = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive", "bigdecimal"] }
once_cell = { workspace = true }
indexmap = { workspace = true }
