[package]
name = "sage-api"
version = "0.10.1"
edition = "2021"
license = "Apache-2.0"
description = "API definitions for the Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
tauri = ["dep:tauri-specta", "dep:specta"]

[dependencies]
sage-config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri-specta = { workspace = true, features = ["derive"], optional = true }
specta = { workspace = true, features = ["derive", "bigdecimal"], optional = true }
once_cell = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
