[package]
name = "sage-cli"
version = "0.12.9"
edition = "2024"
license = "Apache-2.0"
description = "A CLI and RPC for Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
sage = { workspace = true }
sage-api = { workspace = true }
sage-api-macro = { workspace = true }
sage-rpc = { workspace = true }
sage-client = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true, features = ["derive"] }
