[package]
name = "sage-config"
version = "0.8.5"
edition = "2021"
license = "Apache-2.0"
description = "Configuration for the Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia-wallet-sdk = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
specta = { workspace = true, features = ["derive", "indexmap"] }
hex = { workspace = true }
once_cell = { workspace = true }
