[package]
name = "sage-config"
version = "0.12.9"
edition = "2024"
license = "Apache-2.0"
description = "Configuration for the Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia-wallet-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
indexmap = { workspace = true, features = ["serde"] }
specta = { workspace = true, features = ["derive", "indexmap"] }
hex = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
serde_json = { workspace = true }
