[package]
name = "sage-database"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The SQLite database for Sage."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true
