[package]
name = "sage-keychain"
version = "0.12.9"
edition = "2024"
license = "Apache-2.0"
description = "A simple password based keychain implementation for Sage."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia-wallet-sdk = { workspace = true }
bip39 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
bincode = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
argon2 = { workspace = true }
