[package]
name = "sage-rpc"
version = "0.12.9"
edition = "2024"
license = "Apache-2.0"
description = "An RPC server for Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
sage = { workspace = true }
sage-api = { workspace = true, features = ["openapi"] }
sage-api-macro = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
utoipa = "5.2.0"
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
bip39 = { workspace = true }
chia-wallet-sdk = { workspace = true, features = ["peer-simulator"] }
sage-wallet = { workspace = true }
