[package]
name = "sage-wallet"
version = "0.8.5"
edition = "2021"
license = "Apache-2.0"
description = "The driver code and sync logic for Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia = { workspace = true }
clvmr = { workspace = true }
chia-wallet-sdk = { workspace = true }
sage-database = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }
itertools = { workspace = true }
futures-util = { workspace = true }
futures-lite = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["http2", "rustls-tls-webpki-roots", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true }
