[package]
name = "sage"
version = "0.12.9"
edition = "2024"
license = "Apache-2.0"
description = "A high level abstraction for running Sage wallet."
authors = ["Rigidity <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/sage"
repository = "https://github.com/rigidity/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
sage-api = { workspace = true }
sage-database = { workspace = true }
sage-config = { workspace = true }
sage-keychain = { workspace = true }
sage-wallet = { workspace = true }
sage-assets = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
toml = { workspace = true, features = ["preserve_order"] }
chia-wallet-sdk = { workspace = true, features = ["rustls"] }
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
bip39 = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
bech32 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
serde_json = { workspace = true }
