[package]
name = "tauri-plugin-barcode-scanner"
version = "2.2.0"
description = "Scan QR codes, EAN-13 and other kinds of barcodes on Android and iOS"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-barcode-scanner"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }